@@ -11,6 +11,7 @@
 - Updated syscall table for 2.6.31 kernel
 - In auditd reset syslog warnings if disk space becomes available
 - Fix getloginuid for python bindings
+- In auditsp-remote plugin, timeout network reads (#514090)
 
 1.7.13
 - Disable libev asserts unless --with-debug passed to configure
